--- a/output/output.html
+++ b/output/output.html
@@ -3,16 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New File</title>
+    <title>Nearest Neighbours Information</title>
 </head>
 <body>
     <header>
-        <h1>File title</h1>
-        <!-- Add navigation or header content here -->
+        <h1>Nearest Neighbours Information</h1>
     </header>
     <p>You can ⌘+F/Ctrl+F and type <code>(desired index)</code> to find a specific index</p>
-    <p>Information here, Images are ranked on their number of times they appear as a nearest neighbour overall. </p>
-    <!-- Basic table -->
+    <p>Images are ranked on their number of times they appear as a nearest neighbour. </p>
     <table border="1" style="width:100%;">
         <thead>
             <tr>
@@ -7029,7 +7027,7 @@
     </table>
 
     <footer>
-        <p>This is a footer with who made it</p>
+        <p>UQ Summer Research 2025</p>
     </footer>
 
 </body>
