--- a/output/output_vgg19.html
+++ b/output/output_vgg19.html
@@ -42,6 +42,12 @@
             height: 100%;
             object-fit: contain; /* Maintain aspect ratio */
         }
+
+        .grid-item-large img {
+            max-width: 700px;
+            max-height: 700px;
+            object-fit: contain;
+        }
   </style>
 </head>
 <body>
@@ -52,7 +58,8 @@
         <p>Images are ranked on their number of times they appear as a nearest neighbour. </p>
         <p>There are a total of 20 clusters (starting from 0). 
         The 10 nearest neighbours were found and used for calculating the nearest neighbour occurrences.</p>
-        <p>You can select a group of points on the force directed diagram to show only those points, double click in the selection to clear it</p>
+        <p>You can select a group of points on the force directed diagram to show only those points, double click in the selection to clear it.</p>
+         <p>You may also single click on a point to display it. It should be noted that when a selection tool is used a double click is required for this.</p>
 
     <h2>Components:</h2>
     <ol>
@@ -63,7 +70,7 @@
                 <li>Includes a KDE plot to aid in visualising density.</li>
                 <li>Points can be hovered over to display their image index.</li>
                 <li>Different point colours represent different clusters.</li>
-                <li><strong>Groups of points can be selected to be displayed on the grid, and to filter the image table.</strong></li>
+                <li><strong>Groups of points can be selected (or single points can be clicked) to be displayed on the grid, and to filter the image table.</strong></li>
             </ul>
         </li>
         <li>
@@ -8189,6 +8196,44 @@
 
         plotDiv.on('plotly_click', function(eventData) {
             console.log("Clicked:", eventData); // Something can be done with this callback at somepoint
+            const selectedIndex = eventData.points.map(point => {
+                const selectedX = point.x;
+                const selectedY = point.y;
+
+                let matchingIndex = -1;
+
+                for (let i = 0; i < data.x.length; i++) {
+                    if (data.x[i] === selectedX && data.y[i] === selectedY) {
+                        matchingIndex = i;
+                        break;
+                    }
+                }
+
+                return matchingIndex
+            })
+
+            const selectedIndexData = selectedIndex !== -1 ? data.index[selectedIndex] : null
+
+            console.log("INDEX: ",selectedIndexData)
+            // only update grid displayt
+
+            const grid = document.getElementById('imageGrid');
+            grid.innerHTML = ""
+
+            const filename = data.image_filenames[selectedIndexData];
+
+            let div = document.createElement("div");
+            div.classList.add("grid-item-large");
+
+            let img = document.createElement("img");
+            img.src = imagePath + filename;
+            img.alt = filename;
+
+            div.appendChild(img);
+            grid.appendChild(div);
+
+
+            
         });
         
         plotDiv.on('plotly_selected', function(eventData) {
